--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#" onclick="reload()">
           <img
             class="company-logo"
-            src="/ZDF_logo!_Logo_2021.svg.png"
+            src="ZDF_logo!_Logo_2021.svg.png"
             alt="logo"
           />
         </a>
