--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <template id="template-news-card">
         <div class="card">
             <div class="card-header">
-              <img id="news-img" src="https://via.placeholder.com/400x200" alt="" />
+              <img id="news-img" src="https://via.placeholder.com/400x200" alt="news-image" />
             </div>
             <div class="card-content">
               <h3 id="news-title">This is Title</h3>
